# githubAPI

./: .gitignore  README.md  dotenv_.py  pyproject.toml  repositories.py  requirements.txt
__tests__/: test_repository.py
